--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ db.sqlite3
 db.sqlite3-journal
 media
 
+# Ignore everything in the migration folder
+/migration/*
+
+# But don't ignore __init__.py
+!/migration/__init__.py
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
