--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
