--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^6.21.3",
     "react-swipeable-views": "^0.14.0"
   },
