--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -15,10 +15,12 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@reduxjs/toolkit": "^2.1.0",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-swipeable-views": "^0.14.0"
   },
