--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
     "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
@@ -26,6 +27,7 @@
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
