--- a/frontend-ts/package.json
+++ b/frontend-ts/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-swipeable-views": "^0.14.0",
+    "uuid": "^9.0.1",
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
