--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-query": "^5.29.2",
     "@wavesurfer/react": "^1.0.4",
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
