--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
+    "pinyin-pro": "^3.24.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
