--- a/backend-nest/package.json
+++ b/backend-nest/package.json
@@ -20,9 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^4.1.0",
+    "@supabase/supabase-js": "^2.45.3",
+    "@zip.js/zip.js": "^2.7.52",
+    "cache-manager": "^5.7.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
